nodeco-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeco-api-service
  namespace: nodeco-prod
spec:
  type: NodePort
  selector:
    app: nodeco-api
  ports:
  - name: api-prod-port
    protocol: TCP
    port: 80
    targetPort: 3000
