nodeco-api/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:  nodeco-api-ingress
  namespace: nodeco-prod
spec:
  rules:
  - host: nodeco.com
    http:
      paths:
      - path: /
        backend:
          serviceName:  nodeco-api-service
          servicePort:  api-prod-port
